576 replace chatcolor with namedtextcolor (#577)
* removed ChatColor from every location that it could be removed from, excluding dependencies such as FastBoard and DecentHolograms

* used legacy component serializer for decent holograms

* added missing inventory clear to initalizeParticipant of CTF

* removed duplicate adding to allParticipants

* replaced getTeamNamedTextColor() with getTeamColor()